--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,16 +64,30 @@
 
 html {
   scroll-behavior: smooth;
-  }
+}
 
 @layer base {
   * {
     /* @apply border-border; */
   }
+
   body {
     @apply bg-black text-white;
   }
+
   .navbar_text {
     @apply px-4 py-1.5 rounded-full text-white/70 text-sm font-semibold hover:bg-white/70 hover:text-white transition duration-300;
+  }
+
+  .gallary_Image {
+    filter: grayscale();
+    -webkit-filter: grayscale();
+    @apply rotate-2 duration-500 ease-in-out;
+  }
+
+  .gallary_Image:hover {
+    -webkit-filter: none;
+    filter: none;
+    @apply rotate-0 duration-500 ease-in-out;
   }
 }
